Update: User Service to use uuid and dto
